--- a/package.json
+++ b/package.json
@@ -25,5 +25,11 @@
 	"dependencies": {
 		"inquirer": "^8.0.0"
 	},
-	"main": "main.js"
+	"main": "main.js",
+	"devDependencies": {
+		"eslint": "^8.20.0",
+		"eslint-config-airbnb-base": "^15.0.0",
+		"eslint-plugin-import": "^2.26.0",
+		"prettier": "^2.7.1"
+	}
 }
